--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -28,7 +28,7 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 
 
 <b>Step 1:</b> Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa.jpg?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-workspace-selection.PNG?raw=true)
 
 <b>Step 3:</b> Now the workspace already created for Cisco CSA, now launch the IDE to develop the handler code.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-IDE.PNG?raw=true)
