--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -30,12 +30,12 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 <b>Step 1:</b> Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-workspace-selection.PNG?raw=true)
 
-<b>Step 3:</b> Now the workspace already created for Cisco CSA, now launch the IDE to develop the handler code.
+<b>Step 2:</b> On clicking on <b>Launch</b> button, the IDE will be launched.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-IDE.PNG?raw=true)
 
-<b>Step 4:</b> Change the configuration in “include-handler.xml” file. Location is <b>CsaCustomHandler-->build-->temp-->include-handler.xml</b>
-the IDE to develop the handler code.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step4.jpg)
+<b>Step 3:</b> All the basic configurations are written in “include-handler.xml” file. Find this file in below location: <b>CsaCustomHandler-->build-->temp-->include-handler.xml.</b> Double click on it and open it in right panel.
+the IDE to develop the handler code.<br> 
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-includehandler.PNG?raw=true)
 
 <b>Step 5:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port.<br>
 
