--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -37,7 +37,17 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 the IDE to develop the handler code.<br> 
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-includehandler.PNG?raw=true)
 
-<b>Step 5:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port.<br>
+<b>Step 4:</b> Basic configurations about Kafka topic and zookeeper IP is written int his file.</b> 
+Default values are set in this file for DLP. 
+```
+	<topic>CiscoDDP</topic>     // Change the Kafka Topic here.
+	<arguments>
+ 		<arg name="zookeeper.connect">172.16.11.10:2181/kafka</arg>  //Configure IP & Port
+	</arguments>
+	<custom class="custom.handlers.ETLHandler” </custom>        
+	//Set the Handler Java Class which we are going to code next step
+```
+
 
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step5.jpg)
 
