--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -48,15 +48,14 @@ Default values are set in this file for DLP.
 	//Set the Handler Java Class which we are going to code next step
 ```
 
-
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step5.jpg)
-
-<b>Step 6 :</b> We have create the custom Java Class in src folder. Here we named ETLHandler.<br>
+<b>Step 5 :</b> Sample Java class for CSA handler is placed in below path. Here we named it as ETLHandler.<br>
 <b>CsaCustomHandler --> customizations --> src --> ETLHandler.java </b>
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/ETLHandlerClass.PNG?raw=true)
 
 <b><u>Sample Coding Exercise</u></b><br>
 
-```code
+```
 package custom.handlers;
 
 import org.apache.commons.configuration.SubnodeConfiguration;
@@ -88,8 +87,14 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 		      } catch (Exception ex) {throw new HandlerException(ex);}}}
 ```
 
-<b>Step 7:</b> Now we need to go to the DLP platform open App Stack Hub option and create a stack.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step7.jpg)
+<b>Step 7:</b> From DLP platform open <b>App Stack Hub<b> option click on "Create Stack" button from top-right corner.
+createStack.PNG
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/createStack.PNG?raw=true)
+
+Clicking on <b>Create Stack</b> button, it screen will open. Fillup all the details as described.
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step9.jpg?raw=true)
+
+
 
 <b>Step 8:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br> 
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step8.jpg)
