--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -87,7 +87,7 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 		      } catch (Exception ex) {throw new HandlerException(ex);}}}
 ```
 
-<b>Step 7:</b> From DLP platform open <b>App Stack Hub<b> option click on "Create Stack" button from top-right corner.
+<b>Step 7:</b> From DLP platform open <b>App Stack Hub</b> option click on <b>"Create Stack"</b> button from top-right corner.
 createStack.PNG
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/createStack.PNG?raw=true)
 
