--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -3,6 +3,12 @@
 
 ## Lab Overview
 
+Cisco® Connected Streaming Analytics (CSA) is an analytics platform that delivers predictive, actionable insights from high-velocity streams of live data.
+•	Streaming query processing supports active, continuous monitoring of live data. This provides instantaneous, real-time analysis and action, as well as efficient use of compute resources. 
+•	CSA’s framework and interfaces are ideal for use case development across a wide variety of business and network management functions and industries. 
+•	CSA provides real-time insights with big data views to support actionable events and dynamic dashboards to help you get more value out of your data. 
+
+
 In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>
 Our platform has Kafka messaging framework in the backend. This utility will take the IP, Port and the Topic details of Kafka messaging system. The application will listen to a local socket continuously and will push the stream from this socket to the Kafka. Now we need to write simple Java code for handling the log data stream and need to configure it in the XML configuration file.
 
@@ -91,9 +97,8 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 createStack.PNG
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/createStack.PNG?raw=true)
 
-Clicking on <b>Create Stack</b> button, it screen will open. Fillup all the details as described.
+Clicking on <b>Create Stack</b> button, below screen will open. Fillup all the details as below.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step7.jpg?raw=true)
-
 
 
 <b>Step 8:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br> 
