--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -3,10 +3,13 @@
 
 ## Lab Overview
 
+<b>Introduction about Cisco® Connected Streaming Analytics (CSA) </b><br>
+
 Cisco® Connected Streaming Analytics (CSA) is an analytics platform that delivers predictive, actionable insights from high-velocity streams of live data.
-•	Streaming query processing supports active, continuous monitoring of live data. This provides instantaneous, real-time analysis and action, as well as efficient use of compute resources. 
-•	CSA’s framework and interfaces are ideal for use case development across a wide variety of business and network management functions and industries. 
-•	CSA provides real-time insights with big data views to support actionable events and dynamic dashboards to help you get more value out of your data. 
+
+* Streaming query processing supports active, continuous monitoring of live data. This provides instantaneous, real-time analysis and action, as well as efficient use of compute resources. 
+* CSA’s framework and interfaces are ideal for use case development across a wide variety of business and network management functions and industries. 
+* CSA provides real-time insights with big data views to support actionable events and dynamic dashboards to help you get more value out of your data. 
 
 
 In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>
