--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -100,18 +100,18 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 createStack.PNG
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/createStack.PNG?raw=true)
 
-Clicking on <b>Create Stack</b> button, below screen will open. Fillup all the details as below.
+<b>Step 8:</b>Clicking on <b>Create Stack</b> button, below screen will open. Fillup all the details as below.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step7.jpg?raw=true)
 
 
-<b>Step 8:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br> 
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step8.jpg)
+<b>Step 9:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br> 
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step8.jpg?raw=true)
 
 <b>Step 9:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step9.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step9.jpg?raw=true)
 
 <b>Step 10:</b> Now we need to start both of this micro service..<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step10.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step10.jpg?raw=true)
 
 <b>Step 11:</b> After running Trucq, we will get IP and 2 port. The First IP and port for Rest API and the second IP and port is for SQL query those will vary in every startup.<br>
 For example:<br>
