--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -105,7 +105,7 @@ createStack.PNG
 
 
 <b>Step 9:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br> 
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step8.jpg?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/stackConfig.PNG?raw=true)
 
 <b>Step 9:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step9.jpg?raw=true)
