--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -110,8 +110,12 @@ createStack.PNG
 <b>Step 9:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step9.jpg?raw=true)
 
-<b>Step 10:</b> Now we need to start both of this micro service..<br>
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step10.jpg?raw=true)
+<b>Step 10:</b> Now we need to start both of this micro service..<br> Click on the <b>Stack Library</b>
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/StartService.PNG?raw=true)
+
+Click on the Green arrow button for starting both the micro services.
+
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/runMicroservices.png?raw=true)
 
 <b>Step 11:</b> After running Trucq, we will get IP and 2 port. The First IP and port for Rest API and the second IP and port is for SQL query those will vary in every startup.<br>
 For example:<br>
