--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -117,6 +117,9 @@ Click on the Green arrow button for starting both the micro services.
 
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/runMicroservices.png?raw=true)
 
+Running state of two micro services:
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/runMicroservicesRunningState.png?raw=true)
+
 <b>Step 11:</b> After running Trucq, we will get IP and 2 port. The First IP and port for Rest API and the second IP and port is for SQL query those will vary in every startup.<br>
 For example:<br>
 
