--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -118,30 +118,30 @@ Click on the Green arrow button for starting both the micro services.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/runMicroservices.png?raw=true)
 
 Running state of two micro services:
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/runMicroservicesRunningState.png?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/truecqAndlogsimuPort.png?raw=true)
 
 <b>Step 11:</b> After running Trucq, we will get IP and 2 port. The First IP and port for Rest API and the second IP and port is for SQL query those will vary in every startup.<br>
 For example:<br>
 
 ```
-     10.75.161.55:1504      // 1504 is the Http Rest API listener Port 
-     10.75.161.55:1505	    // 1505 is the SQL query Listener Port
+     10.10.10.92:8651       // 8651 is the Http Rest API listener Port 
+     10.10.10.92:8652	    // 8652 is the SQL query Listener Port
 ```
 
-<b>Step 12:</b> Now we need to configure the Trucq IP and Port is our custom handler. So we need to update the configuration file.<br>
+<b>Step 12:</b> Above Truecq IP and Port number details are required to set the custome handler. We need to to update the configuration file.<br> Open the IDE and double click on the below file
 
 <b>CsaCustomHandler-->customizations-->instances-->local-runtime.properties</b><br>
 
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step12.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/localpropertyfile.PNG?raw=true)
 
 <b>Step 13:</b>In this step we need to stop the handler first. In the top of the IDE we can select stop from the combo. <br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step13.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step13.jpg?raw=true)
 
 <b>Step 14:</b>In this step we need to build our handler. In the top of the IDE we can select build from the combo.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step14.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step14.jpg?raw=true)
 
 <b>Step 15:</b>In this step we need to Start our handler to select Run. In the top of the IDE we can select run from the combo.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step15.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step15.jpg?raw=true)
 
 
 <b>Step 16:</b>Now we can start Zeppelin for visualization. In the Data Repository we will get the  </>Drill button.<br>
