--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -145,10 +145,10 @@ For example:<br>
 
 
 <b>Step 16:</b>Now we can start Zeppelin for visualization. In the Data Repository we will get the  </>Drill button.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step16.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step16.jpg?raw=true)
 
 <b>Step 17:</b>: Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point for SQL query listener.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step17.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step17.jpg?raw=true)
 
 Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>
 
@@ -159,10 +159,10 @@ postgresql.password	      :
 postgresql.url		      : jdbc:postgresql://10.75.161.55:1505/cqdb
 postgresql.user	          : trucq
 ```
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step17_1.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step17_1.jpg?raw=true)
 
 <b>Step 18:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step18.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step18.jpg?raw=true)
 
 
 ### Things to Try
