--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -148,15 +148,15 @@ For example:<br>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step16.jpg?raw=true)
 
 <b>Step 17:</b>: Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point for SQL query listener.<br>
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step17.jpg?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/visualization.PNG?raw=true)
 
 Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>
 
 ```
 postgresql.driver.name    :  org.postgresql.Driver
-postgresql.max.result     : 1000
-postgresql.password	      : 
-postgresql.url		      : jdbc:postgresql://10.75.161.55:1505/cqdb
+postgresql.max.result     :  1000
+postgresql.password	  : 
+postgresql.url		  : jdbc:postgresql://10.10.10.92:8652/cqdb
 postgresql.user	          : trucq
 ```
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step17_1.jpg?raw=true)
