--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -156,10 +156,13 @@ Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuratio
 postgresql.driver.name    :  org.postgresql.Driver
 postgresql.max.result     :  1000
 postgresql.password	  : 
-postgresql.url		  : jdbc:postgresql://10.10.10.92:8652/cqdb
-postgresql.user	          : trucq
+postgresql.url		  :  jdbc:postgresql://10.10.10.92:8652/cqdb
+postgresql.user	          :  trucq
+
 ```
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step17_1.jpg?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/zeppelinPsqlPortDetails.PNG?raw=true)
+
+After setting the above value, click on the <b>Restart</b> button.
 
 <b>Step 18:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step18.jpg?raw=true)
