--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -165,7 +165,7 @@ postgresql.user	          :  trucq
 After setting the above value, click on the <b>Restart</b> button.
 
 <b>Step 18:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step18.jpg?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/zeppelinSqlQurery.png?raw=true)
 
 
 ### Things to Try
@@ -180,6 +180,3 @@ Developers can build their own application for the Run Time Visualization, CSA e
 
 
 ## <center>Thank You</center>
-
-
-
