--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -145,7 +145,7 @@ For example:<br>
 
 
 <b>Step 16:</b>Now we can start Zeppelin for visualization. In the Data Repository we will get the  </>Drill button.<br>
-![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/step16.jpg?raw=true)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/ZepplineSelection.PNG?raw=true)
 
 <b>Step 17:</b>: Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point for SQL query listener.<br>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/visualization.PNG?raw=true)
