--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -35,9 +35,13 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 
 ### Now we are going to demo for a web server log Analysis step by step.
 
+<b>Step 1:</b> Explore DLP Platform 
 
+DLP website URL ([link](https://developer.cisco.com/))
 
-<b>Step 1:</b> Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
+[http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
+
+<b>Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-workspace-selection.PNG?raw=true)
 
 <b>Step 2:</b> On clicking on <b>Launch</b> button, the IDE will be launched.
