--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -1,23 +1,22 @@
 # Visualizing CSV with Tableau
 
-## Objective
+## Lab Overview
 
 Tableau is a powerful business intelligence and analytics tool. In this Learning Lab, you will learn how to import a csv file into Data Learning Platform and visualize it with Tableau.
 
-After you complete this lab, you'll understand how to perform the following tasks:
-- Get data from a csv file
-- Explore data with the Tableau server
-- Import network data from local machine and analyze how many UDP and ICMP packages have been received in each second
-
-
-Completion time: 30 minutes
-
+<b>Lab Objectives
+•	Understand how to get a data from file
+•	Learn how to explore data with tableau server
+•	Learn how to import network data from local machine and analyze how many UDP and ICMP packages have been received in each second.
 
 ## Prerequisites
 
-- Tableau server explores .csv (comma separated values) files only
-- Use commas to separate individual fields in the .csv file
-- The .csv file must have a header line that names each column of the data
-- The .csv file must be smaller than 50MB
+•	Only the file in csv format can be explored in Tableau server
+•	The field in “csv” file should be comma separated
+•	The file must have a header line, which names each column of the data
+•	The file size should be smaller than 50MB
 
-## (Link to DLP here)
+
+## DLP website URL ([link](https://developer.cisco.com/))
+
+[http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
