--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -1,10 +1,10 @@
 # Visualizing CSV with Tableau
 
-## Lab Overview
+## <b>Lab Overview</b>
 
 Tableau is a powerful business intelligence and analytics tool. In this Learning Lab, you will learn how to import a csv file into Data Learning Platform and visualize it with Tableau.
 
-<b>Lab Objectives
+<b>Lab Objectives</b>
 •	Understand how to get a data from file
 •	Learn how to explore data with tableau server
 •	Learn how to import network data from local machine and analyze how many UDP and ICMP packages have been received in each second.
