--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -5,9 +5,9 @@
 Tableau is a powerful business intelligence and analytics tool. In this Learning Lab, you will learn how to import a csv file into Data Learning Platform and visualize it with Tableau.
 
 ## Lab Objectives 
-•	Understand how to get a data from file
-•	Learn how to explore data with tableau server
-•	Learn how to import network data from local machine and analyze how many UDP and ICMP packages have been received in each second.
+•	Understand how to get a data from file<br>
+•	Learn how to explore data with tableau server<br>
+•	Learn how to import network data from local machine and analyze how many UDP and ICMP packages have been received in each second.<br>
 
 ## Prerequisites
 
