--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -22,7 +22,7 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 
 ## Lab Objective
 
-* Building custom handler for CSA in Developer's Learning Platform(DLP) and analyze the data at real time. 
+* Building custom handler for CSA in DLP and analyze the data at real time. 
 
 ## Prerequisites
 
