--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -13,7 +13,7 @@ Cisco® Connected Streaming Analytics (CSA) is an analytics platform that delive
 
 ## Lab Overview
 
-In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>
+In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our DLP platform.<br>
 Our platform has Kafka messaging framework in the backend. This utility will take the IP, Port and the Topic details of Kafka messaging system. The application will listen to a local socket continuously and will push the stream from this socket to the Kafka. Now we need to write simple Java code for handling the log data stream and need to configure it in the XML configuration file.
 
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa.jpg?raw=true)
@@ -44,15 +44,15 @@ DLP website URL ([link](https://developer.cisco.com/))
 <b>Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-workspace-selection.PNG?raw=true)
 
-<b>Step 2:</b> On clicking on <b>Launch</b> button, the IDE will be launched.
+<b>Step 2:</b> On clicking on <b>Launch</b> button, the IDE will be launched based on workspace.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-IDE.PNG?raw=true)
 
-<b>Step 3:</b> All the basic configurations are written in “include-handler.xml” file. Find this file in below location: <b>CsaCustomHandler-->build-->temp-->include-handler.xml.</b> Double click on it and open it in right panel.
-the IDE to develop the handler code.<br> 
+<b>Step 3:</b> All the basic configurations are written in “include-handler.xml” file. Find this file in below location: <b>CsaCustomHandler-->build-->temp-->include-handler.xml.</b> Double click on it and open it in right panel.<br>
+
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-includehandler.PNG?raw=true)
 
 <b>Step 4:</b> Basic configurations about Kafka topic and zookeeper IP is written int his file.</b> 
-Default values are set in this file for DLP. 
+Default values are already set in this file for DLP. 
 ```
 	<topic>CiscoDDP</topic>     // Change the Kafka Topic here.
 	<arguments>
@@ -101,8 +101,8 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 		      } catch (Exception ex) {throw new HandlerException(ex);}}}
 ```
 
-<b>Step 6:</b> From DLP platform open <b>App Stack Hub</b> option click on <b>"Create Stack"</b> button from top-right corner.
-createStack.PNG
+<b>Step 6:</b> From DLP platform open <b>App Stack Hub</b> option click on <b>Create Stack</b> button from top-right corner.
+
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/createStack.PNG?raw=true)
 
 <b>Step 7:</b>Clicking on <b>Create Stack</b> button, below screen will open. Fillup all the details as below.
