--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -41,18 +41,17 @@ DLP website URL ([link](https://developer.cisco.com/))
 
 [http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
-<b>Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
+<b>Select CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-workspace-selection.PNG?raw=true)
 
 <b>Step 2:</b> On clicking on <b>Launch</b> button, the IDE will be launched based on workspace.
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-IDE.PNG?raw=true)
 
-<b>Step 3:</b> All the basic configurations are written in “include-handler.xml” file. Find this file in below location: <b>CsaCustomHandler-->build-->temp-->include-handler.xml.</b> Double click on it and open it in right panel.<br>
+<b>Step 3:</b> All the basic configurations are written in “include-handler.xml” file. Find this file in below location: <b>CsaCustomHandler-->build-->tmp-->include-handler.xml.</b> Double click on it and open it in right panel.<br>
 
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-includehandler.PNG?raw=true)
 
-<b>Step 4:</b> Basic configurations about Kafka topic and zookeeper IP is written int his file.</b> 
-Default values are already set in this file for DLP. 
+<b>Step 4:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port and change the name of the custom class which we are going to develop.
 ```
 	<topic>CiscoDDP</topic>     // Change the Kafka Topic here.
 	<arguments>
