--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -51,7 +51,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 
 ![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-includehandler.PNG?raw=true)
 
-<b>Step 4:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port and change the name of the custom class which we are going to develop.
+<b>Step 4:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port and change the name of the custom class which we are going to develop. Here handler java class name is ETLHandler.java.
 ```
 	<topic>CiscoDDP</topic>     // Change the Kafka Topic here.
 	<arguments>
