--- a/labs/vizualize-csv-tableau/2.md
+++ b/labs/vizualize-csv-tableau/2.md
@@ -1,25 +1,11 @@
 
-**Step 1**. Import csv data from your local machine to Data Learning Platform.
-
-	1. Sign in to the Data Learning Platform using your user id.<br>
-	2. Click the **Data Repository** tab.<br>
-	3. Click the **Import New Data** button. 
-![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/ImportCSV.PNG?raw=true)
-	4. Type the name of your .csv file into the **Name** field. <br>
-	5. Click **Choose File...** and then select the file on your local machine.<br>
-	6. Type a description of your data into the **Description** field.<br>
-	7. If you want to share your data with other people, select the **Public** radio button; otherwise, select the **Protect** radio button to keep your data private.<br>
-	8. Click the **Import** button.
-
-![Importing the CSV File](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/import_data_dialog.png?raw=true)
-      	9. Your data appears in the data repository.
-      	
-**Step 2.** Select the data and then click the **Visualize** button
+**Step 1.** Select the data and then click the **Visualize** button.
+Click on the pre-loaded CSV file from <b>Data Repository</b>. Pre-loaded file is "network_origin.csv"
 
 ![Selecting data to visualize](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/select_data_in_repo.png?raw=true)
 
 
-**Step 3**.  If your browser blocked the visualization page, take the following steps:
+**Step 2**.  If your browser blocked the visualization page, take the following steps:
 
 	1. Click the pop up blocker icon at the end of the address bar. <br>
 	2. Click the link for the pop up window you&#39;d like to see. <br>
@@ -28,15 +14,15 @@
 
 ![Unblocking popups](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/unblock_popups.png?raw=true)
 
-**Step 4**.  Sign in to the Tableau server with your account name and password.
+**Step 3**.  Sign in to the Tableau server with your account name and password.
 
 ![Logging in to the Tableau server](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/signin_tableau_server.png?raw=true)
 
-**Step 5**.  View the data dimensions and measures in a Tableau workbook.
+**Step 4**.  View the data dimensions and measures in a Tableau workbook.
 
 ![Tableau workbook](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/tableau_wkbk.png?raw=true)
 
-**Step 6**. Explore the data with drag and drop operations, and create some report.
+**Step 5**. Explore the data with drag and drop operations, and create some report.
 For example, if you want to create a report to view how many “UDP” and “ICMP” packages are received in each minute, please follow these steps:
 
 	1)	Right click on “receive_time” field <br>
