--- a/labs/vizualize-csv-tableau/2.md
+++ b/labs/vizualize-csv-tableau/2.md
@@ -1,6 +1,7 @@
 
-**Step 1.** Select the data and then click the **Visualize** button.
-Click on the pre-loaded CSV file from <b>Data Repository</b>. Pre-loaded file is "network_origin.csv"
+**Step 1.** Select the data and then click the **Visualize** button. <br>
+
+Click on the pre-loaded CSV file from <b>Data Repository</b>. Pre-loaded file is "network_origin.csv".
 
 ![Selecting data to visualize](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/vizualize-csv-tableau/assets/images/select_data_in_repo.png?raw=true)
 
