--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -17,6 +17,6 @@ Tableau is a powerful business intelligence and analytics tool. In this Learning
 •	The file size should be smaller than 50MB
 
 
-## DLP website URL ([link](https://developer.cisco.com/))
+## Explore Data Learning Platform(DLP)
 
-[http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
+<font color='red'>Request access to the Data Learning Platform by sending a message to:</font> [datalearningplatform@cisco.com](mailto:datalearningplatform@cisco.com)
